--- a/arsil2.css
+++ b/arsil2.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url("images/bg.jpg");
+    background-image:url("Images/bg.jpg");
     background-repeat:  no-repeat;
     background-size:300%;
 
@@ -37,47 +37,47 @@ body{
 
   #img
   {
-  width:800px;
-  margin-top:-100px;
-  margin-left:120px;
+  width:250px;
+  margin-top:-30px;
+  margin-left:57px;
   animation:zoomout 2s ease-out;
   }
   #a
   {
-  font-size:40px;
-  width:100px;
+  font-size:15px;
+  width:60px;
   box-shadow:2px 2px 5px  black;
   margin-left:20px;
-  margin-top:-350px;
+  margin-top:-110px;
   
   animation:typin 2s steps(20) infinite alternate-reverse;
   }
   #b
   {
-  font-size:40px;
-  margin-top:30px;
+  font-size:15px;
+  margin-top:20px;
   margin-left:20px;
   animation:fromtop 2s,zoomout 2s ease-out;
   }
   #c
   {
-  font-size:40px;
+  font-size:15px;
   color:#0aa5fe;
-  margin-left:120px;
-  margin-top:-70px;
-  box-shadow:2px 3px;
-  width:210px;
+  margin-left:55px;
+  margin-top:-27px;
+  box-shadow:1px 1px;
+  width:80px;
   animation:fromtop 3s,zoomout s ease-out;
   }
   #d
   {
   margin-left:20px;
-  font-size:40px;
-  margin-top:50px;
+  font-size:15px;
+  margin-top:20px;
   color:#0aa5fe;
-  box-shadow:2px 3px;
-  width:300px;
-  height:50px;
+  box-shadow:1px 1px;
+  width:120px;
+  height:18px;
   text-wrap:nowrap;
   overflow:hidden;
   animation:typing 4s steps(20) infinite;
